--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                <label><input type="radio" name="lang" value="CSS">CSS</label>
 
-               <label><input type="radio" name="lang" value="Ruby">Rub</label>
+               <label><input type="radio" name="lang" value="Ruby">Ruby</label>
 
 
         </fieldset>
